--- a/style.css
+++ b/style.css
@@ -1,15 +1,20 @@
 body {
-    background-color: black;
-    color: white;
-    font-size: large;
+  background-color: black;
 }
 
-.button {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #4CAF50;
-    color: white;
-    text-decoration: none;
-    font-size: large;
-    border-radius: 4px;
+* {
+  font-size: large;
+  font-family: Arial, sans-serif;
+  color: white;
+}
+
+button {
+  padding: 10px 20px;
+  background-color: hsl(122, 100%, 20%);
+  border: 1px solid white;
+}
+
+button:disabled {
+  color: gray;
+  border-color: gray;
 }
