--- a/style.css
+++ b/style.css
@@ -18,3 +18,26 @@ button:disabled {
   color: gray;
   border-color: gray;
 }
+
+.center-container {
+  position: relative;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: fit-content;
+}
+
+input {
+  background-color: black;
+  color: white;
+}
+
+input[type="number"] {
+  width: 5ch;
+}
+
+.hidden {
+  display: none;
+}
